# Beatpad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
crates/engine/: Cargo.toml
crates/engine/examples/: smoke.rs
crates/engine/src/: effect.rs  engine.rs  event.rs  lib.rs  mode.rs  track.rs
crates/engine/src/backend/: kira_backend.rs  mod.rs
crates/format/: Cargo.toml
crates/format/src/: beat.rs  io.rs  lib.rs  manifest.rs
scripts/: rasterize-logo.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  input.rs  lib.rs  state.rs  update_check.rs
src/model/domain/: keybindings.ts  pad.ts  theme.ts
src/model/domain/__tests__/: keybindings.test.ts
src/model/i18n/: en.ts  es.ts  locale.ts
src/model/i18n/__tests__/: i18n.test.ts
src/model/ipc/: client.ts  commands.ts  configStore.ts  dialog.ts
src/model/store/: beatFileStore.ts  keybindingsStore.ts  localeStore.ts  settingsStore.ts  toastStore.ts  transportStore.ts
src/presenters/: padVm.ts  useBank.ts  useBeatFile.ts  useBoardMenuSync.ts  useDocumentLang.ts  useKeybindings.ts  useKeyboardInput.ts  useLoopEvents.ts  useMenuEvents.ts  useMenuToggle.ts  useModeControl.ts  usePadActions.ts  usePadGrid.ts  usePersistBoard.ts  usePersistSettings.ts  useSettings.ts  useSoundErrorEvents.ts  useSoundEvents.ts  useT.ts  useTheme.ts  useUpdateCheck.ts
src/presenters/__tests__/: usePadGrid.test.ts
src/views/: BankIcon.tsx  BankToggle.tsx  BoardView.tsx  ControlCell.tsx  KeyRecorder.tsx  PadGridView.tsx  PadView.tsx  RoundControl.tsx  SegmentedToggle.tsx  SettingsDialog.tsx  Toaster.tsx
