[workspace]
resolver = "2"
members = ["src-tauri", "crates/engine", "crates/format"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/jcardama/Beatpad"
authors = ["jcardama <jcardama@hey.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# kira/cpal are unpleasant to run unoptimized; optimize all deps in dev.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
