[package]
name = "app"
description = "BeatPad desktop shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5"
log = "0.4"
engine = { path = "../crates/engine" }
format = { path = "../crates/format" }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

